@@ -11,8 +11,7 @@ version = 0.06
 [ACPS::RPM]
 
 [Prereqs]
-Clustericious = 0.9906
-Mojolicious::Plugin::Subdispatch = 0
+Clustericious = 0.9909
 
 [RemovePrereqs]
 remove = strict
